--- a/packages/extension/tsconfig.json
+++ b/packages/extension/tsconfig.json
@@ -1,20 +1,36 @@
 {
+    "extends": "../../tsconfig.json",
     "compilerOptions": {
         "baseUrl": "./",
         "paths": {
             "@src/*": ["src/*"]
         },
-        "target": "es5",
+        "target": "es6",
         "module": "commonjs",
         "moduleResolution": "node",
         "rootDir": "./src",
         "outDir": "dist/js",
-        "strict": true,
-        "sourceMap": true,
         "jsx": "react",
-        "esModuleInterop": true,
-        "lib": ["es2015", "dom"],
+        "lib": ["dom", "es6", "es2017"],
+        "strict": true,
         "experimentalDecorators": true,
-        "allowSyntheticDefaultImports": true
+        "allowSyntheticDefaultImports": true,
+
+        "noFallthroughCasesInSwitch": true,
+        "emitDecoratorMetadata": true,
+        "noImplicitAny": true,
+        "strictNullChecks": true,
+        "strictFunctionTypes": true,
+        "noImplicitThis": true,
+        "alwaysStrict": true,
+        "noUnusedLocals": true,
+        "noUnusedParameters": true,
+        "noImplicitReturns": true
+        // "suppressImplicitAnyIndexErrors": true,
     }
+    // "exclude": [
+    //     "node_modules",
+    //     "./src/**/*.test.ts"
+    // ],
+    // "include": ["./src/**/*.tsx", "./src/**/*.ts"]
 }
