--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -3,9 +3,9 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "ts-node src/index.ts",
-    "dev": "NODE_ENV=development nodemon --exec ts-node --files src/index.ts",
-    "test": "NODE_ENV=test jest",
+    "start": "ts-node src/server.ts",
+    "dev": "NODE_ENV=development nodemon --exec ts-node --files src/server.ts",
+    "test": "NODE_ENV=test jest --watch",
     "clean": "rm -rf dist && mkdir dist",
     "build-babel": "babel -d ./dist ./src -s",
     "build": "yarn clean && yarn build-babel"
@@ -18,7 +18,10 @@
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "redis": "^3.0.2",
+    "superagent": "^5.2.2",
+    "supertest": "^4.0.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.3",
@@ -34,8 +37,11 @@
     "@types/jest": "^25.2.1",
     "@types/morgan": "^1.9.0",
     "@types/node": "^13.13.4",
+    "@types/redis": "^2.8.20",
+    "@types/redis-mock": "^0.17.0",
     "jest": "^25.5.4",
     "nodemon": "^2.0.2",
+    "redis-mock": "^0.49.0",
     "ts-jest": "^25.4.0",
     "ts-node": "^8.9.1",
     "typescript": "^3.8.3"
