--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -80,6 +80,7 @@
         "bootstrap": "^4.4.1",
         "react": "^16.12.0",
         "react-dom": "^16.12.0",
+        "react-icons": "^3.10.0",
         "react-test-renderer": "^16.12.0"
     }
 }
