--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "ts-node src/server.ts",
     "dev": "NODE_ENV=development nodemon --exec ts-node --files src/server.ts",
-    "test": "NODE_ENV=test jest --watch",
+    "test": "NODE_ENV=test jest --runInBand",
+    "test:watch": "NODE_ENV=test jest --watch --runInBand",
     "clean": "rm -rf dist && mkdir dist",
     "build-babel": "babel -d ./dist ./src -s",
     "build": "yarn clean && yarn build-babel"
@@ -18,10 +19,8 @@
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
-    "morgan": "~1.9.1",
-    "redis": "^3.0.2",
-    "superagent": "^5.2.2",
-    "supertest": "^4.0.2"
+    "ioredis": "^4.16.3",
+    "morgan": "~1.9.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.3",
@@ -34,14 +33,16 @@
     "@types/cors": "^2.8.6",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.6",
+    "@types/ioredis": "^4.16.2",
     "@types/jest": "^25.2.1",
     "@types/morgan": "^1.9.0",
     "@types/node": "^13.13.4",
-    "@types/redis": "^2.8.20",
     "@types/redis-mock": "^0.17.0",
+    "@types/supertest": "^2.0.9",
     "jest": "^25.5.4",
     "nodemon": "^2.0.2",
     "redis-mock": "^0.49.0",
+    "supertest": "^4.0.2",
     "ts-jest": "^25.4.0",
     "ts-node": "^8.9.1",
     "typescript": "^3.8.3"
