--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -42,12 +42,15 @@
         "@storybook/addons": "^5.3.18",
         "@storybook/preset-typescript": "^3.0.0",
         "@storybook/react": "^5.3.18",
+        "@types/bootstrap": "^4.3.2",
         "@types/chrome": "^0.0.91",
         "@types/jest": "^24.0.25",
         "@types/node": "^13.1.2",
-        "@types/react": "^16.9.17",
-        "@types/react-dom": "^16.9.4",
-        "@types/react-test-renderer": "^16.9.1",
+        "@types/react": "^16.9.35",
+        "@types/react-dom": "^16.9.8",
+        "@types/react-icons": "^3.0.0",
+        "@types/react-slick": "^0.23.4",
+        "@types/react-test-renderer": "^16.9.2",
         "@typescript-eslint/eslint-plugin": "^2.14.0",
         "@typescript-eslint/parser": "^2.14.0",
         "awesome-typescript-loader": "^5.2.1",
@@ -81,6 +84,8 @@
         "react": "^16.12.0",
         "react-dom": "^16.12.0",
         "react-icons": "^3.10.0",
-        "react-test-renderer": "^16.12.0"
+        "react-slick": "^0.26.1",
+        "react-test-renderer": "^16.12.0",
+        "slick-carousel": "^1.8.1"
     }
 }
