--- a/packages/extension/tsconfig.json
+++ b/packages/extension/tsconfig.json
@@ -28,9 +28,6 @@
         "noImplicitReturns": true
         // "suppressImplicitAnyIndexErrors": true,
     }
-    // "exclude": [
-    //     "node_modules",
-    //     "./src/**/*.test.ts"
-    // ],
+    // "exclude": ["node_modules", "./src/**/*.test.ts", "./src/**/*.stories.tsx"],
     // "include": ["./src/**/*.tsx", "./src/**/*.ts"]
 }
