--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -55,6 +55,7 @@
         "babel-jest": "^24.9.0",
         "babel-loader": "^8.0.6",
         "css-loader": "^3.4.0",
+        "dotenv-webpack": "^1.8.0",
         "eslint": "^6.8.0",
         "eslint-config-prettier": "^6.9.0",
         "eslint-plugin-prettier": "^3.1.2",
